--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "REST Api for a Restaurant",
     "main": "./src/app.js",
     "dependencies": {
-        "bcrypt": "^5.0.1",
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
