--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-rate-limit": "^6.4.0",
+        "formidable": "^2.0.1",
         "http-errors": "^2.0.0",
         "joi": "^17.6.0",
         "jsonwebtoken": "^8.5.1",
